# aws-backend

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
src/aws-tests/src/smoking-tests/: Cargo.toml
src/aws-tests/src/smoking-tests/src/: lib.rs
src/aws-tests/src/smoking-tests/src/smoking-tests-macros/: Cargo.toml
src/aws-tests/src/smoking-tests/src/smoking-tests-macros/src/: lib.rs
src/aws-tests/src/smoking-tests/tests/: api.rs
src/aws-tests/src/staging-tests/: Cargo.toml
src/aws-tests/src/staging-tests/src/: lib.rs
src/aws-tests/src/staging-tests/src/staging-tests-macros/: Cargo.toml
src/aws-tests/src/staging-tests/src/staging-tests-macros/src/: lib.rs
src/aws-tests/src/staging-tests/tests/: api_item_get.rs  api_item_simple_search.rs  ingest_item_flow.rs
src/common/: Cargo.toml
src/common/src/: aggregate.rs  batch.rs  dynamodb_batch.rs  env.rs  event.rs  event_id.rs  has.rs  has_key.rs  item_id.rs  lib.rs  localized.rs  page.rs  shop_id.rs  shops_item_id.rs  sort.rs
src/common/src/api/: api_gateway_proxy_response_builder.rs  api_gateway_v2_http_response_builder.rs  collection.rs  error.rs  error_code.rs  mod.rs
src/common/src/currency/: command.rs  command_data.rs  data.rs  domain.rs  mod.rs  record.rs
src/common/src/error/: mapping_error.rs  missing_field.rs  mod.rs
src/common/src/item_state/: domain.rs  mod.rs
src/common/src/language/: command.rs  command_data.rs  data.rs  domain.rs  mod.rs  record.rs
src/common/src/opensearch/: bulk_response.rs  mod.rs  search_response.rs  search_result.rs
src/common/src/price/: command.rs  command_data.rs  data.rs  domain.rs  mod.rs  record.rs
src/common/src/serde/: date.rs
src/item/: Cargo.toml
src/item/src/: lib.rs
src/item/src/item-api/: Cargo.toml
src/item/src/item-api/src/: lib.rs
src/item/src/item-api/src/item-api-common/: Cargo.toml
src/item/src/item-api/src/item-api-common/src/: lib.rs
src/item/src/item-api/src/item-api-get-item/: Cargo.toml
src/item/src/item-api/src/item-api-get-item/src/: lib.rs  main.rs
src/item/src/item-api/src/item-api-get-item/tests/: acceptance.rs
src/item/src/item-api/src/item-api-search-items/: Cargo.toml
src/item/src/item-api/src/item-api-search-items/src/: main.rs
src/item/src/item-api/src/item-api-simple-search/: Cargo.toml
src/item/src/item-api/src/item-api-simple-search/src/: lib.rs  (+1 more)
src/item/src/item-core/: Cargo.toml
src/item/src/item-core/src/: description.rs  domain.rs  hash.rs  item.rs  item_event.rs  item_state.rs  item_state_domain.rs  lib.rs  shop_name.rs  sort_item_field.rs  title.rs
src/item/src/item-core/src/item/: command.rs  command_data.rs  diff_record.rs  document.rs  document_update.rs  domain.rs  get_data.rs  hash.rs  mod.rs  record.rs  update_document.rs  update_record.rs
src/item/src/item-core/src/item_event/: domain.rs  mod.rs  record.rs
src/item/src/item-core/src/item_event_type/: record.rs
src/item/src/item-core/src/item_state/: command.rs  command_data.rs  data.rs  document.rs  domain.rs  mod.rs  record.rs
src/item/src/item-data/: Cargo.toml
src/item/src/item-data/src/: get_data.rs  item_state_data.rs  lib.rs  sort_item_field_data.rs
src/item/src/item-dynamodb/: Cargo.toml
src/item/src/item-dynamodb/src/: item_event_record.rs  item_event_type_record.rs  item_record.rs  item_state_record.rs  item_summary_hash.rs  item_update_record.rs  lib.rs  repository.rs
src/item/src/item-dynamodb/tests/: read.rs  write.rs
src/item/src/item-index/: Cargo.toml
src/item/src/item-index/src/: bulk.rs  lib.rs
src/item/src/item-index/tests/: lib.rs
src/item/src/item-lambda/: Cargo.toml
src/item/src/item-lambda/src/: lib.rs
src/item/src/item-lambda/src/item-lambda-common/: Cargo.toml
src/item/src/item-lambda/src/item-lambda-materialize-dynamodb-new/: Cargo.toml
src/item/src/item-lambda/src/item-lambda-materialize-dynamodb-update/: Cargo.toml
src/item/src/item-lambda/src/item-lambda-materialize-opensearch-new/: .env.localstack  Cargo.toml
src/item/src/item-lambda/src/item-lambda-materialize-opensearch-update/: Cargo.toml
src/item/src/item-lambda/src/item-lambda-write-new/: Cargo.toml
src/item/src/item-lambda/src/item-lambda-write-update/: Cargo.toml
src/item/src/item-opensearch/: Cargo.toml
src/item/src/item-opensearch/src/: item_document.rs  item_state_document.rs  item_update_document.rs  lib.rs  repository.rs
src/item/src/item-opensearch/tests/: lib.rs  repository.rs
src/item/src/item-read/: Cargo.toml
src/item/src/item-read/item-write/tests/: repository.rs
src/item/src/item-read/src/: lib.rs  repository.rs  service.rs
src/item/src/item-read/tests/: lib.rs  repository.rs  service.rs
src/item/src/item-service/: Cargo.toml
src/item/src/item-service/src/: command_service.rs  get_service.rs  item_command.rs  item_command_data.rs  item_state_command_data.rs  lib.rs  query_service.rs
src/item/src/item-write/: Cargo.toml
src/item/src/item-write/src/: lib.rs  repository.rs  service.rs
src/item/src/item-write/tests/: lib.rs  repository.rs  service.rs
src/scrape/src/scrape-core/: Cargo.toml
src/scrape/src/scrape-core/src/: data.rs  lib.rs  service.rs  spec.rs
src/scrape/src/scrape-core/tests/: acceptance.rs  service.rs
src/scrape/src/scrape-static/: Cargo.toml
src/scrape/src/scrape-static/src/: lib.rs  militariamart.rs
src/staging-tests/: Cargo.toml
src/staging-tests/src/: lib.rs
src/staging-tests/src/staging-tests-macros/: Cargo.toml
src/staging-tests/src/staging-tests-macros/src/: lib.rs
src/staging-tests/tests/: acceptance.rs  api_item_get.rs  api_item_simple_search.rs  foo.rs  ingest_item_flow.rs
src/test-api/: Cargo.toml
src/test-api/src/: api_gateway.rs  dynamodb.rs  lambda.rs  lib.rs  localstack.rs  opensearch.rs  s3.rs  sqs.rs  sqs_lambda.rs
src/test-api/src/test-api-macros/: Cargo.toml
src/test-api/src/test-api-macros/src/: lib.rs
src/test-api/src/test_lambda/: Cargo.toml
src/test-api/src/test_lambda/src/: lib.rs  main.rs
src/test-api/tests/: dynamodb.rs  lambda.rs  localstack.rs  opensearch.rs  s3.rs  sqs.rs  sqs_lambda.rs
(+44 files in other folders)
