[package]
name = "blitzfilter-parent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
filter = { workspace = true }
item = { workspace = true }
scrape = { workspace = true }
test-api = { workspace = true }

[workspace]
members = ["src/common", "src/filter", "src/item", "src/scrape", "src/test-api"]

[workspace.dependencies]
accept-language = "3.1.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
aws-config = "1.8.5"
aws-sdk-dynamodb = "1.88.0"
aws-sdk-lambda = "1.93.0"
aws-sdk-opensearch = "1.94.0"
aws-sdk-sqs = "1.80.0"
aws_lambda_events = { version = "0.17.0", default-features = false }
blake3 = "1.8.2"
common = { path = "src/common" }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
field = "0.1.0"
filter = { path = "src/filter" }
futures = { version = "0.3.31", default-features = false }
hex = "0.4.3"
http = "1.3.1"
httpdate = "1.0.3"
item = { path = "src/item" }
item-api = { path = "src/item/src/item-api" }
item-data = { path = "src/item/src/item-data" }
item-api-get-item = { path = "src/item/src/item-api/src/item-api-get-item" }
item-core = { path = "src/item/src/item-core" }
item-dynamodb = { path = "src/item/src/item-dynamodb" }
item-opensearch = { path = "src/item/src/item-opensearch" }
item-lambda = { path = "src/item/src/item-lambda" }
item-service = { path = "src/item/src/item-service" }
item-lambda-materialize-dynamodb-new = { path = "src/item/src/item-lambda/src/item-lambda-materialize-dynamodb-new" }
item-lambda-materialize-dynamodb-update = { path = "src/item/src/item-lambda/src/item-lambda-materialize-dynamodb-update" }
item-lambda-materialize-opensearch-new = { path = "src/item/src/item-lambda/src/item-lambda-materialize-opensearch-new" }
item-lambda-materialize-opensearch-update = { path = "src/item/src/item-lambda/src/item-lambda-materialize-opensearch-update" }
item-lambda-write-new = { path = "src/item/src/item-lambda/src/item-lambda-write-new" }
item-lambda-write-update = { path = "src/item/src/item-lambda/src/item-lambda-write-update" }
itertools = "0.14.0"
lambda_runtime = "0.14.3"
mockall = "0.13.1"
opensearch = { version = "2.3.0", features = ["aws-auth", "rustls-tls"] }
quote = "1.0.40"
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
rstest = "0.26.1"
scrape = { path = "src/scrape" }
scrape-core = { path = "src/scrape/src/scrape-core" }
scrape-static = { path = "src/scrape/src/scrape-static" }
scraper = { version = "0.23.1", default-features = false }
serde = "1.0.219"
serde_dynamo = "4.2.14"
serde_json = "1.0.142"
serial_test = "3.2.0"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0.105"
test-api = { path = "src/test-api" }
test-api-macros = { path = "src/test-api/src/test-api-macros" }
testcontainers = "0.24.0"
testcontainers-modules = "0.12.1"
thiserror = "2.0.14"
time = "0.3.41"
tokio = { version = "1.47.1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-builder = "0.21.1"
url = "2.5.4"
uuid = "1.18.0"
walkdir = "2.5.0"
