[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
itertools = "0.14.0"

# Optional dependencies via feature-flags
aws-sdk-dynamodb = { version = "1.82.0", optional = true }
tracing = { version = "0.1.41", optional = true }
serde_dynamo = { version = "4.2.14", optional = true }

[dev-dependencies]
rstest = "0.25.0"
serde_json = "1.0.140"

[features]
default = []
dynamodb = ["serde_dynamo", "aws-sdk-dynamodb", "tracing"]