[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
itertools = "0.14.0"

# Optional dependencies via feature-flags
aws-sdk-dynamodb = { version = "1.82.0", optional = true }
tracing = { version = "0.1.41", optional = true }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"], optional = true }
aws_lambda_events = { version = "0.17.0", optional = true }
http = { version = "1.3.1", optional = true }
serde_json = { version = "1.0.141", optional = true }
httpdate = { version = "1.0.3", optional = true }

[dev-dependencies]
rstest = "0.25.0"
serde_json = "1.0.140"

[features]
default = []
dynamodb = ["serde_dynamo", "aws-sdk-dynamodb", "tracing"]
api = ["aws_lambda_events/apigw", "http", "serde_json", "httpdate"]
