[package]
name = "test-api"
version = "0.1.0"
edition = "2024"

[dependencies]
test-api-macros = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
hex = { workspace = true }
serial_test = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["localstack"] }
opensearch = { workspace = true, features = ["aws-auth"] }
aws-config = { workspace = true }
aws-sdk-opensearch = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-lambda = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
walkdir = { workspace = true }
