[package]
name = "test-api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
test-api-macros = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
aws_lambda_events = { workspace = true, features = ["apigw"] }
serial_test = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_dynamo = { workspace = true, features = ["aws-sdk-dynamodb+1"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["localstack"] }
opensearch = { workspace = true, features = ["aws-auth"] }
aws-config = { workspace = true }
aws-sdk-opensearch = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-lambda = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
walkdir = { workspace = true }
test_lambda = { path = "src/test_lambda" }

once_cell = "1.21.3"
libc = "0.2.175"
