[package]
name = "smoking-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-tests-common = { workspace = true }
smoking-tests-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["default", "json"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
futures-util = { workspace = true }
