[package]
name = "item-data"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["api"] }
item-core = { workspace = true }
serde = { workspace = true }
time = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
