[package]
name = "item-data"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["api"] }
item-core = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
url = { workspace = true }
fake = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
test-data = ["fake", "common/test-data", "item-core/test-data"]
