[package]
name = "item-dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["dynamodb"] }
item-core = { workspace = true }
async-trait = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_dynamo = { workspace = true, features = ["aws-sdk-dynamodb+1"] }
serde = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }

[dev-dependencies]
test-api = { workspace = true }
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
serial_test = { workspace = true }
rstest = { workspace = true }
url = { workspace = true, features = ["serde"] }
