[package]
name = "item-dynamodb"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["dynamodb"] }
item-core = { workspace = true }
serde = { workspace = true }
field = { workspace = true }
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
url = { workspace = true, features = ["serde"] }

async-trait = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
serde_dynamo = { workspace = true, features = [
    "aws-sdk-dynamodb+1",
], optional = true }
tracing = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }
fake = { workspace = true, optional = true }

[dev-dependencies]
test-api = { workspace = true, features = ["dynamodb"] }
serial_test = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
repository = [
    "common/dynamodb",
    "async-trait",
    "aws-sdk-dynamodb",
    "serde_dynamo",
    "tracing",
    "mockall",
]
test-data = ["fake", "common/test-data", "item-core/test-data"]
