[package]
name = "item-index"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
async-trait = { workspace = true }
opensearch = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
test-api = { workspace = true }
serial_test = { workspace = true }
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
