[package]
name = "item-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
item-lambda-common = { workspace = true }
item-lambda-write-new = { workspace = true }
item-lambda-write-update = { workspace = true }
item-lambda-materialize-dynamodb-new = { workspace = true }
item-lambda-materialize-dynamodb-update = { workspace = true }
item-lambda-materialize-opensearch-new = { workspace = true }
item-lambda-materialize-opensearch-update = { workspace = true }
