[package]
name = "item-opensearch"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["opensearch"] }
item-core = { workspace = true }
item-dynamodb = { workspace = true }
async-trait = { workspace = true }
opensearch = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
field = { workspace = true }
url = { workspace = true }
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
mockall = { workspace = true }
search-filter-core = { workspace = true }

# Optional deps
fake = { workspace = true, optional = true }

[dev-dependencies]
test-api = { workspace = true, features = ["opensearch"] }
serial_test = { workspace = true }
rstest = { workspace = true }
item-opensearch = { workspace = true, features = ["test-data"] }

[features]
default = []
test-data = ["fake", "common/test-data", "item-core/test-data"]
