[package]
name = "item-read"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../../common", features = ["dynamodb"] }
item-core = { path = "../item-core" }
async-trait = "0.1.88"
aws-sdk-dynamodb = "1.82.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing = "0.1.41"
thiserror = "2.0.12"
mockall = "0.13.1"

[dev-dependencies]
test-api = { path = "../../../test-api" }
serial_test = "3.2.0"
rstest = "0.25.0"
time = { version = "0.3.41", features = ["local-offset", "macros", "formatting"] }

[features]
default = []
api = ["common/api"]
