[package]
name = "item-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["dynamodb", "api"] }
item-core = { workspace = true }
item-dynamodb = { workspace = true, features = ["repository"] }
item-opensearch = { workspace = true }
opensearch = { workspace = true }
async-trait = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_dynamo = { workspace = true, features = ["aws-sdk-dynamodb+1"] }
serde = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
search-filter-core = { workspace = true }

fake = { workspace = true, optional = true }

[dev-dependencies]
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
rstest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
item-dynamodb = { workspace = true, features = ["repository", "test-data"] }
fake = { workspace = true }
item-service = { workspace = true, features = ["test-data"] }

[features]
default = []
test-data = ["fake", "common/test-data", "item-core/test-data"]
