[package]
name = "item-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
mockall = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
search-filter-core = { workspace = true }

fake = { workspace = true, optional = true }
item-dynamodb = { workspace = true, features = ["repository"], optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
serde_dynamo = { workspace = true, features = [
    "aws-sdk-dynamodb+1",
], optional = true }
item-opensearch = { workspace = true, optional = true }
opensearch = { workspace = true, optional = true }

[dev-dependencies]
time = { workspace = true, features = ["local-offset", "macros", "formatting"] }
rstest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
item-dynamodb = { workspace = true, features = ["repository", "test-data"] }
fake = { workspace = true }
item-service = { workspace = true, features = [
    "api",
    "test-data",
    "dynamodb",
    "opensearch",
] }
item-opensearch = { workspace = true, features = ["test-data"] }

[features]
default = []
api = ["common/api"]
dynamodb = [
    "aws-sdk-dynamodb",
    "serde_dynamo",
    "item-dynamodb",
    "common/dynamodb",
]
opensearch = ["dep:opensearch", "item-opensearch"]
test-data = ["fake", "common/test-data", "item-core/test-data"]
