[package]
name = "scrape-core"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
item-core = { workspace = true }
futures = { workspace = true, features = ["async-await", "alloc"] }
tokio = { workspace = true, features = ["time"] }
async-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rstest = { workspace = true }
