[package]
name = "scrape-core"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["sqs"] }
item-core = { workspace = true }
item-data = { workspace = true }
item-service = { workspace = true }
item-dynamodb = { workspace = true, features = ["repository"] }
futures = { workspace = true, features = ["async-await", "alloc"] }
tokio = { workspace = true, features = ["time"] }
async-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sqs = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rstest = { workspace = true }
test-api = { workspace = true }
serial_test = { workspace = true }
time = { workspace = true }
url = { workspace = true, features = ["serde"] }
