[package]
name = "scrape-static"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../../common" }
scrape-core = { path = "../scrape-core" }
item-core = { path = "../../../item/src/item-core" }
reqwest = { version = "0.12.22", features = ["json", "native-tls-vendored"] }
async-trait = "0.1.88"
scraper = { version = "0.23.1", default-features = false }
tracing = "0.1.41"