[package]
name = "scrape-static"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
scrape-core = { workspace = true }
item-core = { workspace = true }
item-data = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
async-trait = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }