[package]
name = "item-api-get-item"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["api"] }
item-read = { workspace = true, features = ["api"] }
item-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
aws_lambda_events = { workspace = true, features = ["apigw"] }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_json = { workspace = true }
accept-language = { workspace = true }
http = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
time = { workspace = true }
http = { workspace = true }
url = { workspace = true }
