[package]
name = "item-api-get-item"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["api"] }
item-core = { workspace = true }
item-service = { workspace = true, features = ["dynamodb", "api"] }
item-dynamodb = { workspace = true, features = ["repository"] }
item-data = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros"] }
aws_lambda_events = { workspace = true, features = ["apigw"] }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }

[dev-dependencies]
test-api = { workspace = true, features = ["api-gateway"] }
rstest = { workspace = true }
time = { workspace = true }
http = { workspace = true }
url = { workspace = true }
